--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.UI.Xaml" version="2.8.1" targetFramework="native" />
-  <package id="Microsoft.Web.WebView2" version="1.0.1418.22" targetFramework="native" />
+  <package id="Microsoft.UI.Xaml" version="2.8.2" targetFramework="native" />
+  <package id="Microsoft.Web.WebView2" version="1.0.1462.37" targetFramework="native" />
   <package id="Microsoft.Windows.CppWinRT" version="2.0.221104.6" targetFramework="native" />
+  <package id="Win2D.uwp" version="1.26.0" targetFramework="native" />
 </packages>
